Fixed z-index von /home id=overlayInfobox

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -69,7 +69,7 @@ a img {
     margin-top: 100px;
     position: absolute;
     right: 320px;    /* left + sidebar, see also  @media screen and (max-width: 899px) */ 
-    z-index: 60;
+    z-index: 299;
     opacity: 0.95;
     max-width: 780px;
     min-width: 580px;
